# crusade-tracker

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
server/crusade/: admin.py  apps.py  models.py  views.py
server/crusade/migrations/: 0001_initial.py
server/server/: settings.py  urls.py
